# Dataverse-MCP-Evals

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
scenarios/: realistic.yaml  scenarios.yaml
src/eval/: __init__.py  agent.py  auth.py  evaluator.py  mcp_client.py  models.py  realistic.py  report.py  state.py
tests/: conftest.py  test_crud.py  test_search.py  test_skills.py
